# BT-Turkcell-Libraries

./: .gitignore  BUILD_VERIFICATION.md  README.md
dotnet/: .dockerignore  Dockerfile  PARAMETERS.md  README.md  TROUBLESHOOTING.md  TurkcellBTDotnetSolution.sln  USAGE.md  configmap-cache.yml  configmap.yml  deployment-cache.yml  deployment.yml  depoloyment-cache.yml  depoloyment.yml
java/: USAGE.md
python/: Dockerfile  PARAMETERS.md  README.md  TROUBLESHOOTING.md  USAGE.md  configmap-cache.yml  configmap.yml  deployment-cache.yml  deployment.yml  pyproject.toml
python/examples/env/: linux-apikey.sh.sample  linux-oauth.sh.sample  windows-apikey.ps1.sample  windows-oauth.ps1.sample
python/k8s/: apikey-configmap.yml  apikey-deployment.yml  apikey-secret.yml  cache-apikey-deployment.yml  cache-apikey-secret.yml  cache-oauth-secret.yml  oauth-configmap.yml  oauth-deployment.yml  oauth-secret.yml
python/src/turkcell_bt_python/: __init__.py  auth_parsing.py  configuration_manager.py  demo_app.py  models.py  options.py  poc.py  service.py
python/tests/: test_configuration_manager.py  test_demo_output.py  test_options.py  test_poc.py  test_service.py
secret-cache/: Dockerfile  beyondtrust-secrets-cache-24.3.16-1.el8.x86_64.rpm  beyondtrust-secrets-cache-25.1.38-1.el8.x86_64.rpm  configmap.yaml  configure.sh  deployment.yaml  service.yaml
verification/: dotnet-build.txt  dotnet-info.txt  dotnet-restore.txt  dotnet-test.txt  maven-package.txt  maven-test.txt  maven-version.txt  python-install.txt  python-package.txt  python-pytest.txt  python-version.txt
(+78 files in other folders)
